i got nerd sniped and now I can link to sections...

--- a/pages/index.html
+++ b/pages/index.html
@@ -129,7 +129,7 @@
                             </a>
                         </h4>
                     </li>
-                    <ol>
+                    <ol type="I">
                         <li>
                             <h5 style="margin: 0px;">
                                 <a href="./mental_health.html#54321_grounding_technique">
