--- a/politics.html
+++ b/politics.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
-        <title>Nonbinary And Intersex Resources</title>
+        <title>Politics</title>
         <style>
 .readable-div {
     display: flex;
@@ -307,24 +307,49 @@
 </div>
 <div class="readable-div">
     <div class="readable-text">
-        <h1 class="readable">
-            Nonbinary and Intersex specific resources
-        </h1>
+        <h1> Politics and LGBT savety </h1>
+        <i>*This is only for safety and facts, not my political opinion.*</i> 
 
+        <h2 id="us_politics">US</h2>
+        To learn about how politicians locally, state, 
+        and federally have voted currently or in the past checkout this site: <br>
+        <a href="https://justfacts.votesmart.org">
+            justfacts.votesmart.org
+        </a>
 
-        <h2 id="nonbinary_and_intersex_general_resources">
-            General Resources
-        </h2>
+        <h3 id="us_upcomming_bills">Current LGBT bills that might go into law</h3>
+        <i>*These are for Healthcare, Dragshows, sports, bathroom, housing, jobs and many other topics.</i>
+        <ul>
+            <li>
+                HRC -
+                <a href="https://www.hrc.org/resources/state-maps">
+                    hrc.org/state-maps
+                </a>
+
+            </li>
+            <li>
+                ACLU -
+                <a href="https://www.aclu.org/legislative-attacks-on-lgbtq-rights-2024">
+                    aclu.org/legislative-attacks-on-lgbtq-rights-2024
+                </a>
+            </li>
+        </ul>        
+
+        <h3 id="us_travel_guide">Goverment’s Travel guide for LGBT safety inside & out of US</h3>
 
         <p>
-            Resource list including Nonbinary HRT & surgery options, and many other topics
-            <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
-                transgendermap.com/for-trans-people/gender-diverse/
-            </a>
+        <a href="https://travel.state.gov/content/travel/en/international-travel/before-you-go/travelers-with-special-considerations/lgbtqi.html/">
+            travel.state.gov/ - travelers with special lgbtqi considerations
+        </a>
         </p>
+        
+
+        <div class="separator"></div>
+
         <p>
-            More coming Soon….. Please suggest things to @pongo.
+            <i>Worldwide-Coming soon</i>
         </p>
+
     </div>
 </div>
 <div class="separator-foot"></div>
