--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         .link-img {
             height: 1.2rem;
             margin: 0em 0.3em;
+            padding: 0em 0em;
             cursor: pointer;
         }
         .link-img-p {
@@ -881,6 +882,38 @@
                             </a> 
                         </h4>
                     </li>
+                </ol>
+            </li>
+            <li>
+                <h3 style="margin: 0px;">
+                    <a href="./politics.html">
+                        Politics and LGBT savety
+                    </a> 
+                </h3>
+                <ol type="A">
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./politics.html#us_politics">
+                                US
+                            </a> 
+                        </h4>
+                    </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./politics.html#us_upcomming_bills">
+                                    Current LGBT bills that might go into law
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./politics.html#us_travel_guide">
+                                    Goverment’s Travel guide for LGBT safety inside & out of US
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
