--- a/mental_health.html
+++ b/mental_health.html
@@ -68,6 +68,7 @@
         .link-img {
             height: 1.2rem;
             margin: 0em 0.3em;
+            padding: 0em 0em;
             cursor: pointer;
         }
         .link-img-p {
@@ -260,6 +261,11 @@
         <a href="./legal_help_for_lgbt.html">
             <li>
                 Legal Help for LGBT
+            </li>
+        </a> 
+        <a href="./politics.html">
+            <li>
+                Politics and LGBT savety
             </li>
         </a> 
         <a href="./general_lgbt_organizations.html">
