--- a/pages/index.html
+++ b/pages/index.html
@@ -663,6 +663,38 @@
             </li>
             <li>
                 <h3 style="margin: 0px;">
+                    <a href="./politics.html">
+                        Politics and LGBT savety
+                    </a> 
+                </h3>
+                <ol type="A">
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./politics.html#us_politics">
+                                US
+                            </a> 
+                        </h4>
+                    </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./politics.html#us_upcomming_bills">
+                                    Current LGBT bills that might go into law
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./politics.html#us_travel_guide">
+                                    Goverment’s Travel guide for LGBT safety inside & out of US
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
+                </ol>
+            </li>
+            <li>
+                <h3 style="margin: 0px;">
                     <a href="./general_lgbt_organizations.html">
                         General LGBT organizations
                     </a> 
