added 'so you think youre trans' section with new links

--- a/pages/index.html
+++ b/pages/index.html
@@ -163,6 +163,13 @@
                 <ol type="A"> 
                     <li>
                         <h4 style="margin: 0px;">
+                            <a href="./social_transitioning.html#so_you_think_your_trans">
+                                So you think youre trans?
+                            </a>
+                        </h4>
+                    </li>
+                    <li>
+                        <h4 style="margin: 0px;">
                             <a href="./social_transitioning.html#passing">
                                 Passing
                             </a>
