--- a/social_transitioning.html
+++ b/social_transitioning.html
@@ -309,6 +309,8 @@
     <div class="readable-text">
         <h1>Socially transitioning</h1>
 
+        <h2 id="so_you_think_your_trans">So you think youre trans?</h2> 
+
         <p>
             <u>Are you struggling with the concept that you might be transgender?</u> <br>
             It's ok,I was there once too! <br>
@@ -335,6 +337,16 @@
                     youtube.com - AtlasWylde - Meet Yourself in the Mirror
                 </a><br>
                 Poem by Ash Wylde about self love. 
+            </li>
+            <li>
+                <a href="https://stainedglasswoman.substack.com/p/beneath-the-surface">
+                    stainedglasswoman - beneath the surface
+                </a>
+            </li>
+            <li>
+                <a href="https://stainedglasswoman.substack.com/p/how-to-figure-out-if-youre-trans">
+                    stainedglasswoman - how to figure out if youre trans
+                </a>
             </li>
         </ul>
 
@@ -441,7 +453,7 @@
                 <img 
                               src="./img/voice_tools_ui.png" 
                               alt="The GUI of the App 'Voice Tools' showing the pitch ranges
-                                    associated with male and female voices." 
+                                     associated with male and female voices." 
                               width="80%"
                               />
             </div>
