--- a/pages/politics.html
+++ b/pages/politics.html
@@ -21,6 +21,13 @@
 
             </li>
             <li>
+                whatever-
+                <a href="https://www.google.com/sdjfnsldfnlasdfnlasdkf">
+                    google.com
+                </a>
+
+            </li>
+            <li>
                 ACLU -
                 <a href="https://www.aclu.org/legislative-attacks-on-lgbtq-rights-2024">
                     aclu.org/legislative-attacks-on-lgbtq-rights-2024
