--- a/pages/index.html
+++ b/pages/index.html
@@ -18,18 +18,18 @@
     text-align: center; 
     margin: 2em 0em;
 }
-    @media (prefers-color-scheme: dark) { 
-        .important-box:hover {
-            background-color: #161616; 
-            color: #f8f8f8;
+        @media (prefers-color-scheme: dark) { 
+            .important-box:hover {
+                background-color: #161616; 
+                color: #f8f8f8;
+            }
         }
-    }
-    @media (prefers-color-scheme: light) { 
-        .important-box:hover {
-            background-color: #f8f8f8; 
-            color: #161616;
+        @media (prefers-color-scheme: light) { 
+            .important-box:hover {
+                background-color: #f8f8f8; 
+                color: #161616;
+            }
         }
-    }
 </style>
 <div class="readable-div">
     <h1 class="readable-text">Worldwide LGBT Resources</h1>
@@ -61,8 +61,18 @@
             </div>
         </a> 
     </div>
+
     <div class="readable-text put-left">
         <h2 style="margin: 0px;"> Chapters: </h2>
+        
+        <p style="margin-bottom: 1em; max-width: 80ch;">
+            <b>Disclaimer:</b> <br>
+            This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
+            Any products/companies are just suggestions. 
+            Please use your own discretion and research with any advice listed. 
+            Always seek the advice of your qualified health care provider regarding any medical questions.
+        </p>
+
         <ol type="1">
             <li>
                 <h3 style="margin: 0px;"> 
