added survey to footer. I'll look into making it a form-form later

--- a/bipoc_resources.html
+++ b/bipoc_resources.html
@@ -453,7 +453,11 @@
 <div class="readable-div">
     <p style="text-align: center;">
         Want to add something here? <br>
-        Contact Pongo under <code>worldwidelgbtresources@gmail.com</code> <br>
+        Contact Pongo under <code>worldwidelgbtresources@gmail.com</code> 
+        or 
+        <a href="https://cryptpad.fr/form/#/2/form/view/+1mRXu4lphjgE2YcY7UMk7CSXJ1T4ORaLSlYj5FFkLo/">
+            with this survey
+        </a><br>
         Technical difficulties? <br>
         Contact Add on 
         <a href="https://discordapp.com/users/245579273052749825">
