added register to vote and ballot

--- a/dog.html
+++ b/dog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
-        <title>Politics</title>
+        <title>Dog</title>
         <style>
 .readable-div {
     display: flex;
@@ -307,60 +307,17 @@
 </div>
 <div class="readable-div">
     <div class="readable-text">
-        <h1> Politics and LGBT savety </h1>
-        <i>*This is only for safety and facts, not my political opinion.*</i> 
+        <h1 id="dog_page">
+            here is the title for dog stuff
+        </h1>
 
-        <h2 id="us_politics">US</h2>
-        To learn about how politicians locally, state, 
-        and federally have voted currently or in the past checkout this site: <br>
-        <a href="https://justfacts.votesmart.org">
-            justfacts.votesmart.org
-        </a>
-        <li> Findout whats on my local ballot: <a href="https://ballotpedia.org/Sample_Ballot_Lookup">
-            ballotpedia.org
-        </a> 
-        </li>
-<li> Register to vote in your state and check if youre already registered: <a href="https://www.nass.org/can-I-vote">
-    nass.org
-</a> </li>
-
-        <h3 id="us_upcomming_bills">Current LGBT bills that might go into law</h3>
-        <i>*These are for Healthcare, Dragshows, sports, bathroom, housing, jobs and many other topics.</i>
-        <ul>
-            <li>
-                HRC -
-                <a href="https://www.hrc.org/resources/state-maps">
-                    hrc.org/state-maps
-                </a>
-
-            </li>
-           
-            <li>
-                ACLU -
-                <a href="https://www.aclu.org/legislative-attacks-on-lgbtq-rights-2024">
-                    aclu.org/legislative-attacks-on-lgbtq-rights-2024
-                </a>
-            </li>
-        </ul>        
-
-        <h3 id="us_travel_guide">Goverment’s Travel guide for LGBT safety inside & out of US</h3>
-
-        <p>
-        <a href="https://travel.state.gov/content/travel/en/international-travel/before-you-go/travelers-with-special-considerations/lgbtqi.html/">
-            travel.state.gov/ - travelers with special lgbtqi considerations
-        </a>
-        </p>
-        
-
-        <div class="separator"></div>
-
-        <p>
-            <i>Worldwide-Coming soon</i>
-        </p>
+        <h2 id="dog_title_h2">
+            and more
+            <span class="highlighted">cats and bunnies</span>
+        </h2>
 
     </div>
-</div>
-<div class="separator-foot"></div>
+</div><div class="separator-foot"></div>
 
 <div class="readable-div">
     <p style="text-align: center;">
