--- a/pages/politics.html
+++ b/pages/politics.html
@@ -9,6 +9,13 @@
         <a href="https://justfacts.votesmart.org">
             justfacts.votesmart.org
         </a>
+        <li> Findout whats on my local ballot: <a href="https://ballotpedia.org/Sample_Ballot_Lookup">
+            ballotpedia.org
+        </a> 
+        </li>
+<li> Register to vote in your state and check if youre already registered: <a href="https://www.nass.org/can-I-vote">
+    nass.org
+</a> </li>
 
         <h3 id="us_upcomming_bills">Current LGBT bills that might go into law</h3>
         <i>*These are for Healthcare, Dragshows, sports, bathroom, housing, jobs and many other topics.</i>
