fixing the word safety

--- a/politics.html
+++ b/politics.html
@@ -307,7 +307,7 @@
 </div>
 <div class="readable-div">
     <div class="readable-text">
-        <h1> Politics and LGBT savety </h1>
+        <h1> Politics and LGBT safety </h1>
         <i>*This is only for safety and facts, not my political opinion.*</i> 
 
         <h2 id="us_politics">US</h2>
