fixed superflous li tags. if that was wrong, I'll wrap them in ul instead

--- a/pages/politics.html
+++ b/pages/politics.html
@@ -4,18 +4,25 @@
         <i>*This is only for safety and facts, not my political opinion.*</i> 
 
         <h2 id="us_politics">US</h2>
-        To learn about how politicians locally, state, 
-        and federally have voted currently or in the past checkout this site: <br>
-        <a href="https://justfacts.votesmart.org">
-            justfacts.votesmart.org
-        </a>
-        <li> Findout whats on my local ballot: <a href="https://ballotpedia.org/Sample_Ballot_Lookup">
-            ballotpedia.org
-        </a> 
-        </li>
-<li> Register to vote in your state and check if youre already registered: <a href="https://www.nass.org/can-I-vote">
-    nass.org
-</a> </li>   
+        <p>
+            To learn about how politicians locally, state, 
+            and federally have voted currently or in the past checkout this site: <br>
+            <a href="https://justfacts.votesmart.org">
+                justfacts.votesmart.org
+            </a>
+        </p>
+        <p>
+            Findout whats on my local ballot: 
+            <a href="https://ballotpedia.org/Sample_Ballot_Lookup">
+                ballotpedia.org
+            </a> 
+        </p>
+        <p>
+            Register to vote in your state and check if youre already registered: 
+            <a href="https://www.nass.org/can-I-vote">
+                nass.org
+            </a> 
+        </p>
 
         <h3 id="us_upcomming_bills">Current LGBT bills that might go into law</h3>
         <i>*These are for Healthcare, Dragshows, sports, bathroom, housing, jobs and many other topics.</i>
@@ -27,7 +34,7 @@
                 </a>
 
             </li>
-           
+
             <li>
                 ACLU -
                 <a href="https://www.aclu.org/legislative-attacks-on-lgbtq-rights-2024">
@@ -39,11 +46,11 @@
         <h3 id="us_travel_guide">Goverment’s Travel guide for LGBT safety inside & out of US</h3>
 
         <p>
-        <a href="https://travel.state.gov/content/travel/en/international-travel/before-you-go/travelers-with-special-considerations/lgbtqi.html/">
-            travel.state.gov/ - travelers with special lgbtqi considerations
-        </a>
+            <a href="https://travel.state.gov/content/travel/en/international-travel/before-you-go/travelers-with-special-considerations/lgbtqi.html/">
+                travel.state.gov/ - travelers with special lgbtqi considerations
+            </a>
         </p>
-        
+
 
         <div class="separator"></div>
 
