--- a/pages/politics.html
+++ b/pages/politics.html
@@ -52,7 +52,7 @@
         </p>
 
 
-        <div class="separator"></div>
+        <div class="separator" style="margin: 2.5em 0em;"></div>
 
         <p>
             <i>Worldwide-Coming soon</i>
