--- a/politics.html
+++ b/politics.html
@@ -80,6 +80,12 @@
             transform: translate(-90%, 100%);
             z-index: 10;
         }
+        h2 {
+            margin-top: 1.5em;
+        }
+        h3 {
+            margin-top: 1.3em;
+        }
         @media (max-aspect-ratio: 1/1) {
             .readable-div {
                 margin-left: 5%;
@@ -359,7 +365,7 @@
         </p>
 
 
-        <div class="separator"></div>
+        <div class="separator" style="margin: 2.5em 0em;"></div>
 
         <p>
             <i>Worldwide-Coming soon</i>
