--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -79,7 +79,7 @@
 
         <p>
             <ul>
-                <li>
+                <li> For general help finding local housing,homeless shelters,food and more checkout these links.
                     <a href="https://www.211.org/about-us/your-local-211">
                         211.org/your-local-211
                     </a>
@@ -88,6 +88,7 @@
                     <a href="https://www.findhelp.org/">
                         findhelp.org/
                     </a>
+                    *Filter "personal filter" and select "lgbt" and press search. this narrows it down to lgbt friendly housing only.
                 </li>
             </ul>
         </p>
